add two pictures of dog to my fav pet

--- a/my-pet.html
+++ b/my-pet.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>My favourite pet</title>
 </head>
 
@@ -31,10 +32,13 @@
 
     <h2>Dog</h2>
 
-    <img src="New folder/dog3-1-340x200.jpg"=alt"a picture of a dog" <p>The history of dogs is an old tale indeed. You
-    could say as long as there has been civilisation, there have been records of humans and dogs. Dogs were domesticated
-    from wolves around 15,000 years ago. New evidence suggests that dogs were first domesticated in East Asia, possibly
-    China. Over time, the dog has developed into hundreds of breeds with a great degree of variation.</p>
+    <img src="New folder/dog3-1-340x200.jpg" alt="a picture of a dog."><img src="New folder/download (1).jpg"alt="a cute picture ofa dog."><img src="New folder/download.jpg"alt="third picture of a dog.">
+    <p>The history of dogs is an old tale indeed.
+        You could say as long as there has been civilisation, there have been records of humans and dogs. Dogs were
+        domesticated
+        from wolves around 15,000 years ago. New evidence suggests that dogs were first domesticated in East Asia,
+        possibly
+        China. Over time, the dog has developed into hundreds of breeds with a great degree of variation.</p>
 
     <p>Dogs, like humans, are highly social animals and this similarity in their overall behavioural pattern accounts
         for their trainability, playfulnes and ability to fit into human households and social situations. This
@@ -84,6 +88,7 @@
         of debate, it now seems to be well established that dogs can distinguish two different types of scents when
         trailing an air scent from some person or thing that has recently passed by, as well as a ground scent that
         remains detectable for a much longer period.</p>
+    <p>Here you can download movies <a href="http://www.o2tvseries.com">o2tvseries</a>.</p>
 </body>
 
 </html>
