changed my-pet.html to index.html and created new dir contacts.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 
     <h2>Dog</h2>
 
-    <img src="New folder/dog3-1-340x200.jpg" alt="a picture of a dog."><img src="New folder/download (1).jpg"alt="a cute picture ofa dog."><img src="New folder/download.jpg"alt="third picture of a dog.">
+    
+        <img src="img/dog3-1-340x200.jpg" alt="a picture of a dog."><img src="img/download (1).jpg"alt="a cute picture ofa dog."><img src="img/download.jpg"alt="third picture of a dog.">
+
     <p>The history of dogs is an old tale indeed.
         You could say as long as there has been civilisation, there have been records of humans and dogs. Dogs were
         domesticated
