--- a/index.html
+++ b/index.html
@@ -2,95 +2,169 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title>My favourite pet</title>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
+  <link href="css/styles.css" rel="stylesheet" type="text/css" />
+  <script src="js/jquery-3.6.0.js"></script>
+  <script src="js/scripts.js"></script>
+  <title>My favourite pet</title>
 </head>
 
 <body>
-    <h1><strong>About a dog</strong></h1>
-    <p> The dog is a pet animal. A dog has sharp teeth so that it can eat flesh very easily, it has four legs, two ears,
-        two eyes, a tail, a mouth, and a nose. It is a very clever animal and is very useful in catching thieves. It
-        runs very fast, barks loudly and attacks the strangers. A dog saves the life of the master from danger. One can
-        find dogs everywhere in the world. Dogs are a very faithful animal. It has a sharp mind and a strong sense of
-        hearing smelling the things. It also has many qualities like swimming in the water, jumping from anywhere, good
-        smelling sense.</p>
-    <h1>Here i am going to tell you about my favourite pet</h1>
-    <P>i've got a dog, and i call it wilfred he is a very nice dog</P>
-    <h2>Here are some of its favourite toys</h2>
-    <ul>
-        <li>balls</li>
-        <li>toy cars</li>
-        <li>bottles</li>
-    </ul>
-    <p>It also loves to watch the rain while it falls. He loves sleeping under the table</p>
-    <p>it's favourite food is beef with chicken meal.
-        and it rarely falls sick</p>
-    <h1>MORE ABOUT A DOG</h1>
+    <div class="container">
+      <ul>
+        <span>
+          <li><a href="contact.html">CONTACT US>></a></li>
+        </span>
+        <span>
+          <li><a href="adoptions.html">MY DOGS>></a></li>
+        </span>
+      </ul>
+      <h1>L.Primes favourite pet.</h1>
+      <p class="latter">Bonjour coma' sava dear, you are welcome to my blog. I know some of my users would prefer light
+        text on a dark background. <button class="btn btn-success" id="green"><span class="clickable">click
+            here</span></button> if you do.</p>
+      <p class="former">If you prefer the former <button class="btn btn-warning" id="yellow"><span
+            class="clickable">click here.</span></button></p>
+      <img id="myfav" src="img/sketch.jpg" alt="a picture of my german shephard pure breed" />
+      <h2><strong>About a dog</strong></h2>
+      <p class="sharp">
+        The dog is a pet animal. A dog has sharp teeth so that it can eat flesh
+        very easily, it has four legs, two ears, two eyes, a tail, a mouth, and a
+        nose. It is a very clever animal and is very useful in catching thieves.
+        It runs very fast, barks loudly and attacks the strangers. A dog saves the
+        life of the master from danger. One can find dogs everywhere in the world.
+        Dogs are a very faithful animal. It has a sharp mind and a strong sense of
+        hearing smelling the things. It also has many qualities like swimming in
+        the water, jumping from anywhere, good smelling sense.
+      </p>
+      <h1>Here i am going to tell you about my favourite pet</h1>
+      <p>
+        i've got a personal dog, and i call it willow, a german shephard pure
+        breed he is a very nice dog and he follows me wherever i go. I also have a
+        bull dog and i call it spike.
+      </p>
+      <h2>Here are some of their favourite toys</h2>
+      <ul>
+        <li>balls.</li>
+        <li>toy cars.</li>
+        <li>bottles.</li>
+      </ul>
+      <h2>Some of their hobbies:</h2>
+      <p>
+        They love to watch the rain while it falls. They also love sleeping under
+        the table.
+      </p>
+      <p>
+        Their favourite food is beef with chicken meal. and they rarely falls
+        sick.
+      </p>
+      <h1>MORE ABOUT A DOG</h1>
 
-    <h2>Dog</h2>
+      <h2>dogs.</h2>
 
-    
-        <img src="img/dog3-1-340x200.jpg" alt="a picture of a dog."><img src="img/download (1).jpg"alt="a cute picture ofa dog."><img src="img/download.jpg"alt="third picture of a dog.">
+      <img src="img/dog3-1-340x200.jpg" alt="a picture of a dog." /><img src="img/download (1).jpg"
+        alt="a cute picture ofa dog." /><img src="img/download.jpg" alt="third picture of a dog." />
+      <div class="about">
+        <p>
+          The history of dogs is an old tale indeed. You could say as long as
+          there has been civilisation, there have been records of humans and dogs.
+          Dogs were domesticated from wolves around 15,000 years ago. New evidence
+          suggests that dogs were first domesticated in East Asia, possibly China.
+          Over time, the dog has developed into hundreds of breeds with a great
+          degree of variation.
+        </p>
 
-    <p>The history of dogs is an old tale indeed.
-        You could say as long as there has been civilisation, there have been records of humans and dogs. Dogs were
-        domesticated
-        from wolves around 15,000 years ago. New evidence suggests that dogs were first domesticated in East Asia,
-        possibly
-        China. Over time, the dog has developed into hundreds of breeds with a great degree of variation.</p>
+        <p>
+          Dogs, like humans, are highly social animals and this similarity in
+          their overall behavioural pattern accounts for their trainability,
+          playfulnes and ability to fit into human households and social
+          situations. This similarity has earned dogs a unique position in the
+          realm of interspecies relationships.
+        </p>
 
-    <p>Dogs, like humans, are highly social animals and this similarity in their overall behavioural pattern accounts
-        for their trainability, playfulnes and ability to fit into human households and social situations. This
-        similarity has earned dogs a unique position in the realm of interspecies relationships.</p>
+        <p>
+          The loyalty and devotion that dogs demonstrate as part of their natural
+          instincts as pack animals closely mimics the human idea of love and
+          friendship, leading many dog owners to view their pets as full-fledged
+          family members.
+        </p>
 
-    <p>The loyalty and devotion that dogs demonstrate as part of their natural instincts as pack animals closely mimics
-        the human idea of love and friendship, leading many dog owners to view their pets as full-fledged family
-        members.</p>
+        <p>
+          The common name for the domestic dog is ‘Canis familiaris‘, a species of
+          the dog family ‘Canidae’. The dog is generally considered the ‘first’
+          domesticated animal.
+        </p>
 
-    <p>The common name for the domestic dog is ‘Canis familiaris‘, a species of the dog family ‘Canidae’. The dog is
-        generally considered the ‘first’ domesticated animal.</p>
+        <p>
+          Dogs can differ in appearance, function, temperament and size. Some
+          small dogs can weigh as little as 1.5 pounds, whereas some larger dogs
+          can weigh as much as 200 pounds.
+        </p>
 
-    <p>Dogs can differ in appearance, function, temperament and size. Some small dogs can weigh as little as 1.5 pounds,
-        whereas some larger dogs can weigh as much as 200 pounds.</p>
+        <p>
+          Depending on the country, there are about 138 officially recognised dog
+          breeds.
+        </p>
 
-    <p>Depending on the country, there are about 138 officially recognised dog breeds.</p>
+        <p>
+          Dogs fill a variety of roles in human society and are often trained as
+          working dogs. For dogs that do not have traditional jobs, a wide range
+          of dog sports provide the opportunity to exhibit their natural skills.
+        </p>
 
-    <p>Dogs fill a variety of roles in human society and are often trained as working dogs. For dogs that do not have
-        traditional jobs, a wide range of dog sports provide the opportunity to exhibit their natural skills.</p>
+        <p>
+          It is estimated that for more than 12,000 years the dog has lived with
+          humans as a hunting companion, protector and friend. A dog is one of the
+          most popular pets in the world and has been referred to as ‘mans best
+          friend’. Whether you are poor or rich, a dog will be faithful and loyal
+          to you and love you to bits.
+        </p>
 
+        <p>
+          A pet dog will fit easily into family life and environment, they of
+          course need caring for as any other pet – feeding, grooming, bathing and
+          when ill, will need a visit to the vets. Dogs thrive on affection and
+          will happily wag its tail when showered with love and attention. Dogs
+          will also sit and sulk if they get told off for doing something wrong.
+        </p>
 
+        <p>
+          A well-mannered dog must be trained properly and with patience and
+          perciverence. You must never mistreat a dog at any time as not only is
+          it very wrong to mistreat any animal, but some will bite in their own
+          defense.
+        </p>
 
-    <p>It is estimated that for more than 12,000 years the dog has lived with humans as a hunting companion, protector
-        and friend. A dog is one of the most popular pets in the world and has been referred to as ‘mans best friend’.
-        Whether you are poor or rich, a dog will be faithful and loyal to you and love you to bits.</p>
+        <p>
+          Larger dogs need considerably more exercise over a larger area than
+          medium sized or small dogs. You can take them out into the countryside
+          or to your local park or recreation ground. Here, they can run about and
+          play games and get the exercise they need to keep them fit and healthy.
+        </p>
 
-    <p></p>A pet dog will fit easily into family life and environment, they of course need caring for as any other pet –
-    feeding, grooming, bathing and when ill, will need a visit to the vets. Dogs thrive on affection and will happily
-    wag its tail when showered with love and attention. Dogs will also sit and sulk if they get told off for doing
-    something wrong.</p>
+        <p>
+          Dogs can be taught how to do things. Throw a small branch, stick or
+          frizzbee and you can teach your dog to go fetch and bring the item back
+          to you. Dogs have nearly 220 million smell-sensitive cells over an area
+          about the size of a pocket handkerchief (compared to 5 million over an
+          area the size of a postage stamp for humans). Some breeds have been
+          selectively bred for excellence in detecting scents.
+        </p>
 
-    <p>A well-mannered dog must be trained properly and with patience and perciverence. You must never mistreat a dog at
-        any time as not only is it very wrong to mistreat any animal, but some will bite in their own defense.</p>
-
-    <p>Larger dogs need considerably more exercise over a larger area than medium sized or small dogs. You can take them
-        out into the countryside or to your local park or recreation ground. Here, they can run about and play games and
-        get the exercise they need to keep them fit and healthy.</p>
-
-
-
-    <p>Dogs can be taught how to do things. Throw a small branch, stick or frizzbee and you can teach your dog to go
-        fetch and bring the item back to you. Dogs have nearly 220 million smell-sensitive cells over an area about the
-        size of a pocket handkerchief (compared to 5 million over an area the size of a postage stamp for humans). Some
-        breeds have been selectively bred for excellence in detecting scents.</p>
-
-    <p>What information a dog actually detects when he is scenting is not perfectly understood. Although once a matter
-        of debate, it now seems to be well established that dogs can distinguish two different types of scents when
-        trailing an air scent from some person or thing that has recently passed by, as well as a ground scent that
-        remains detectable for a much longer period.</p>
-    <p>Here you can download movies <a href="http://www.o2tvseries.com">o2tvseries</a>.</p>
+        <p>
+          What information a dog actually detects when he is scenting is not
+          perfectly understood. Although once a matter of debate, it now seems to
+          be well established that dogs can distinguish two different types of
+          scents when trailing an air scent from some person or thing that has
+          recently passed by, as well as a ground scent that remains detectable
+          for a much longer period.
+        </p>
+      </div>
+      <p>
+        Here you can download movies
+        <a href="http://www.o2tvseries.com">o2tvseries</a>.
+      </p>
+    </div>
 </body>
 
 </html>
